<resources>
    <string name="app_name">WebConnect Test</string>
    <string name="splash_screen_text">Find Nearest Local\nMarket</string>
    <string name="get_started_text">O On-Time Departures. Pay just for your seat. No\nRefusal from our end. Spacious &amp; Comfortable\nSeating. Female passengers safety standards.\nOnboard Refreshments. Cab Tracking through\nMaps</string>
    <string name="best_markitplac">Best Markitplac</string>
    <string name="otp_terms_text">By creating passcode you agree with our\n<font color = '#F5BEAF'>Terms &amp; Conditions</font> and <font color = '#F5BEAF'>Privacy Policy.</font></string>
    <string name="string_btn_submit">Submit</string>
    <string name="string_edit_hint_post_code">Select Post Code Or Address</string>
    <string name="string_txt_post_code">Post Code</string>
    <string name="string_txt_or">Or</string>
    <string name="string_btn_pick_location">pick your current location</string>
    <string name="string_txt_phone">Phone</string>
    <string name="string_txt_last_name">Last Name</string>
    <string name="string_txt_first_name">First Name</string>
    <string name="string_txt_set_profile">Set Profile</string>
    <string name="string_txt_happid">Happid</string>
    <string name="string_btn_get_started">Get Started</string>
    <string name="string_txt_enter_mobile_number">Enter your mobile number</string>
    <string name="string_txt_welcome">Hello, Welcome Back to Our Account</string>
    <string name="string_btn_request_otp">Request OTP</string>
    <string name="string_txt_login_with">Login With</string>
    <string name="string_txt_google">Google</string>
    <string name="string_txt_facebook">Facebook</string>
    <string name="string_txt_verification_code">Enter your Verification code</string>
    <string name="string_txt_sent_verification_code">We Have sent the code verification to your mobile number</string>
    <string name="string_txt_mobile_number">+91 9795225356</string>
    <string name="string_txt_otp_dialog">Your confirmation code is\nBelow — Enter it And We\'ll Help\nYou Get Signed In.</string>
    <string name="string_txt_resend_otp">Don\'t receive OTP? <font color = '#F5BEAF'>Resend</font></string>
</resources>