<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:paddingBottom="40dp"
    android:orientation="vertical"
    tools:context=".views.GetStarted">

    <FrameLayout
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/blue"
            android:layout_gravity="center"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/u"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"/>
    </FrameLayout>
    <TextView
        android:layout_gravity="center"
        android:fontFamily="@font/montserratbold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_txt_happid"
        android:textColor="#FF7F5D"
        android:textStyle="bold"
        android:textSize="40sp"/>


        <TextView
            android:layout_marginTop="177dp"
            android:layout_gravity="center"
            android:text="@string/best_markitplac"
            android:fontFamily="@font/interbold"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <TextView
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_started_text"
            />



    <androidx.appcompat.widget.AppCompatButton
        android:layout_marginTop="72dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:id="@+id/btn_getStarted"
        android:background="@drawable/submitbutton"
        android:textColor="@color/white"
        android:fontFamily="@font/montserratbold"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/string_btn_get_started"
        android:textAllCaps="false"
        />
</LinearLayout>