<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.Register"

    >

    <include layout="@layout/toolbar"
        android:id="@+id/back_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingBottom="37dp"
            android:paddingTop="80dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserratbold"
                android:text="@string/string_txt_enter_mobile_number"
                android:textColor="#020202"
                android:textSize="34sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/montserratbold"
                android:text="@string/string_txt_welcome"
                android:textSize="16sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="54dp"
                android:orientation="vertical"
                android:paddingTop="36dp">

                <com.github.willena.phoneinputview.PhoneInputView
                    android:id="@+id/phone_input"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:autofillHints="phone"
                    android:background="#FDF0EC"
                    android:dividerPadding="10dp" />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_requestOtp"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/submitbutton"
                    android:fontFamily="@font/montserratbold"
                    android:text="@string/string_btn_request_otp"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="3.25">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_weight="1"
                        android:background="#CAC7C7" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.25"
                        android:gravity="center"
                        android:text="@string/string_txt_login_with" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_weight="1"
                        android:background="#CAC7C7" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="57dp"
                    android:layout_marginTop="40dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="159dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginEnd="5dp"
                        android:background="#FDF0EC"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:src="@drawable/googleimage" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="@string/string_txt_google" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="159dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:background="#FDF0EC"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:src="@drawable/fbimage" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="@string/string_txt_facebook" />
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/txt_register_terms"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:fontFamily="@font/montserratbold"
                    android:gravity="center"
                    android:text="@string/otp_terms_text"
                    android:textColor="#878686" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
