<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.Otp">
    <include
        layout="@layout/toolbar"
        android:id="@+id/back_toolbar"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:paddingTop="80dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_txt_verification_code"
                android:fontFamily="@font/montserratbold"
                android:textSize="34sp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_txt_sent_verification_code"
                android:textSize="16sp"
                android:fontFamily="@font/montserratbold"
                />


            <LinearLayout
                android:paddingBottom="102dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="29dp"
                android:paddingTop="36dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_otp_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/montserratbold"
                    android:text="@string/string_txt_mobile_number"
                    android:textSize="16sp"
                    app:drawableRightCompat="@drawable/edit_pen" />


                    <in.aabhasjindal.otptextview.OtpTextView
                        android:id="@+id/otpView"
                        android:layout_marginTop="30dp"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:bar_enabled="false"
                        app:length="4"
                        app:otp=""
                        app:width="50dp"
                        app:height="60dp"
                        app:otp_box_background="@color/purple_700"
                        app:otp_text_size="16sp"/>



                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_otp_submit"
                    android:layout_marginTop="50dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/submitbutton"
                    android:text="Submit"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:fontFamily="@font/montserratbold"/>

                <TextView
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="96dp"
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_txt_resend_otp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/montserratbold"/>

            </LinearLayout>
        </LinearLayout>

    </ScrollView>





</LinearLayout>